# METH

./: CMakeLists.txt  README.md
include/: byteorder.h  crypto.h  meth.h  randombytes.h
include/internal/: meth_internal.h
src/: byteorder.c  crypto.c  meth.c  randombytes.c
test/: main.c
